--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="/css/profile.css">
     <link rel="stylesheet" href="/css/skills.css">
+    <link rel="stylesheet" href="/css/experiences.css">
 
 </head>
 
@@ -44,21 +45,54 @@
                 <h1 class="profile-title">Hola, soy <br> Drazen Hernandez</h1>
                 <p class="profile-details">
                     Soy un estudiante del bootcamp FullStack en NUCBA, actualmente me encuentro comenzando en este lindo
-                    mundo de la programación, he realizado cursos de QA manual y automation y ahora me interesa conocer y
+                    mundo de la programación, he realizado cursos de QA manual y automation y ahora me interesa conocer
+                    y
                     manejar el mundo del desarrollo frontend y backend.
                 </p>
                 <button class="profile-btn">
                     Descargar cv
                 </button>
+            </div>
+            <span class="profile-img-section">
+                <img class="profile-img" src="/assets/perfil.jpeg" alt="programador">
+                <div class="profile-img-line">
+
                 </div>
-                <span class="profile-img-section">
-                    <img class="profile-img" src="/assets/perfil.jpeg" alt="programador">
-                    <div class="profile-img-line">
-        
-                    </div>
-                </span>
+            </span>
         </section>
     </div>
+
+    <section class="experiences">
+        <img class="wave" src="/assets/wave.svg" alt="división">
+        <div class="experiences-body">
+            <h2 class="experiences-title">Experiencia</h2>
+            <div class="experiences-grid">
+
+                <div class="experience ">
+                    <div class="experience-date">2021-Actual</div>
+                    <div class="experience-company">Feedback IT</div>
+                    <div class="experience-position">Soporte IT Junior</div>
+                    <div class="experience-description">Soporte IT en sucursal para Universad de San Andrés, se corren
+                        actualizaciones en los equipos, se presta ayuda a profesores con el uso correcto de la
+                        tecnología y buen aprovechamiento de la misma</div>
+                </div>
+                <div class="line"></div>
+                <div class="empty"></div>
+                <div class="empty"></div>
+                <div class="line"></div>
+                <div class="experience">
+                    <div class="experience-date">2017-2021</div>
+                    <div class="experience-company">FastFood Sudamericana S.A.</div>
+                    <div class="experience-position">Lider de Producción</div>
+                    <div class="experience-description">Encargado de turno y personal, manejo de sistema POS, delegación
+                        de tareas, recibo de mercaderias y su alta en el sistema, organización de turno de trabajo</div>
+                </div>
+            </div>
+        </div>
+        <img class="wave wave_bottom" src="/assets/wave.svg" alt="división">
+    </section>
+
+
     <div class="horizontal-padding vertical-padding">
         <section class="skills">
             <h2 class="skills-title">Habilidades</h2>
