--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/profile.css">
     <link rel="stylesheet" href="/css/skills.css">
     <link rel="stylesheet" href="/css/experiences.css">
+    <link rel="stylesheet" href="/css/contact.css">
 
 </head>
 
@@ -40,7 +41,7 @@
     </header>
 
     <div class="horizontal-padding vertical-padding">
-        <section class="profile">
+        <section class="profile" id="profile">
             <div class="profile-info">
                 <h1 class="profile-title">Hola, soy <br> Drazen Hernandez</h1>
                 <p class="profile-details">
@@ -62,7 +63,7 @@
         </section>
     </div>
 
-    <section class="experiences">
+    <section class="experiences" id="experience">
         <img class="wave" src="/assets/wave.svg" alt="división">
         <div class="experiences-body">
             <h2 class="experiences-title">Experiencia</h2>
@@ -94,7 +95,7 @@
 
 
     <div class="horizontal-padding vertical-padding">
-        <section class="skills">
+        <section class="skills" id="skills">
             <h2 class="skills-title">Habilidades</h2>
             <ul class="skills-list">
                 <li class="skills-skill">CSS</li>
@@ -104,6 +105,10 @@
             </ul>
         </section>
     </div>
+
+    <section class="contact vertical-padding" id="contact">
+        <h2 class="contact-title">Contacto</h2>
+    </section>
 
 
 
