--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page Drazen</title>
+    <!--Font Awesome-->
+    <script src="https://kit.fontawesome.com/66af92cb03.js" crossorigin="anonymous"></script>
+    <!--Favicon-->
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+    <!--Animate CSS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="/css/profile.css">
@@ -108,6 +113,47 @@
 
     <section class="contact vertical-padding" id="contact">
         <h2 class="contact-title">Contacto</h2>
+
+        <div class="contact-wrapper">
+            <div class="contact-form">
+                <form action="">
+                    <p>
+                        <label>Nombre Completo</label>
+                        <input type="text" name="fullname" id="fullname">
+                    </p>
+                    <p>
+                        <label>Email</label>
+                        <input type="email" name="email" id="email">
+                    </p>
+                    <p>
+                        <label>Telefono +54</label>
+                        <input type="tel" name="phone" id="phone" pattern="[0-9]{2}-[0-9]{4}-[0-9]{4}" required
+                            maxlength="10">
+                    </p>
+                    <p>
+                        <label>Asunto:</label>
+                        <input type="text" name="asunto" id="asunto">
+                    </p>
+                    <p class="block">
+                        <label>Mensaje</label>
+                        <textarea name="message" id="message" rows="3"></textarea>
+                    </p>
+                    <p class="block">
+                        <button type="submit">Enviar</button>
+                    </p>
+                </form>
+            </div>
+            <div class="contact-info">
+                <h4>Mas información</h4>
+                <ul>
+                    <li><i class="fas fa-map-marker-alt"></i>Buenos Aires, Argentina</li>
+                    <li><i class="fas fa-phone-alt"></i>+54 11-2871-2634</li>
+                    <li><i class="fas fa-envelope-open-text"></i>Drazeneduardo@gmail.com</li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium consectetur quod tempore
+                    recusandae assumenda nostrum iure velit quam iste sit!</p>
+            </div>
+        </div>
     </section>
 
 
