ultimos arreglos y footer

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
             <div class="contact-info">
                 <h4>Mas información</h4>
                 <ul>
-                    <li><i class="fas fa-map-marker-alt"></i>Buenos Aires, Argentina</li>
-                    <li><i class="fas fa-phone-alt"></i>+54 11-2871-2634</li>
+                    <li><i class="fas fa-map-marker-alt"></i> Buenos Aires, Argentina</li>
+                    <li><i class="fas fa-phone-alt"></i> +54 11-2871-2634</li>
                     <li><i class="fas fa-envelope-open-text"></i>Drazeneduardo@gmail.com</li>
                 </ul>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium consectetur quod tempore
@@ -155,6 +155,8 @@
             </div>
         </div>
     </section>
+
+    <footer> &copy;  Hecho por Drazen para Nucba</footer>
 
 
 
