arreglos de version mobile

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="contact-form">
                 <form action="">
                     <p>
-                        <label>Nombre Completo</label>
+                        <label>Nombre</label>
                         <input type="text" name="fullname" id="fullname">
                     </p>
                     <p>
