--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="topheader">
         <nav class="topnav">
             <a href="#" class="logo">
-                <img src="/assets/perfil.jpeg" alt="logo">
+                <img src="/assets/logo.jpg" alt="logo">
                 <div>Drazen Hernandez <br> Programador FullStack
                 </div>
             </a>
